[tool.poetry]
name = "zoho"
version = "0.1.0"
description = ""
authors = ["Erik van Raalte <erik.vanraalte@surf.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"
sqlalchemy = "^2.0.25"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
